[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/level/_base/_BaseLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/level/tileset/brown/TileMapBrown.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/bots/dummy/Dummy.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels proper/main/Spawn.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/main/main menu arena/MainMenuScreenArena.gd" type="Script" id=5]
[ext_resource path="res://scenes/main/main menu arena/MainMenuScreenArenaSpawn.gd" type="Script" id=6]
[ext_resource path="res://scenes/main/main menu arena/MainMenuScreenArenaSpawn2.gd" type="Script" id=7]

[node name="MainMenuArena" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="TileMapBrown" parent="Nav" index="0" instance=ExtResource( 2 )]
position = Vector2( 0, -24 )
tile_data = PoolIntArray( -131076, -1610612734, 0, -131075, -1610612734, 0, -131074, -1610612734, 0, -131073, -1610612734, 0, -196608, -1610612734, 0, -196607, -1610612734, 0, -196606, -1610612734, 0, -196605, -1610612734, 0, -196604, -1610612734, 0, -196603, -1610612734, 0, -196602, -1610612734, 0, -196601, -1610612734, 0, -196600, -1610612734, 0, -196599, -1610612734, 0, -196598, -1610612734, 0, -196597, -1610612734, 0, -196596, -1610612734, 0, -196595, -1610612734, 0, -65540, -1610612734, 0, -65539, -1610612734, 0, -65538, 5, 0, -65537, 3, 0, -131072, 3, 0, -131071, 3, 0, -131070, 3, 0, -131069, 3, 0, -131068, 3, 0, -131067, 3, 0, -131066, 3, 0, -131065, 3, 0, -131064, 3, 0, -131063, 3, 0, -131062, 3, 0, -131061, -1610612731, 0, -131060, -1610612734, 0, -131059, -1610612734, 0, -4, 2, 0, -3, 2, 0, -2, -1073741821, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, -1610612733, 0, -65524, -1610612734, 0, -65523, -1610612734, 0, 65532, 2, 0, 65533, 2, 0, 65534, -1073741821, 0, 65535, -1073741823, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, -1610612733, 0, 12, -1610612734, 0, 13, -1610612734, 0, 131068, 2, 0, 131069, 2, 0, 131070, -1073741821, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 1610612736, 0, 65540, 1610612736, 0, 65541, -1610612736, 0, 65542, 1610612736, 0, 65543, -1073741824, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, -1610612733, 0, 65548, -1610612734, 0, 65549, -1610612734, 0, 196604, 2, 0, 196605, 2, 0, 196606, -1073741821, 0, 196607, 0, 0, 131072, 1610612737, 0, 131073, 0, 0, 131074, 0, 0, 131075, 1610612736, 0, 131076, -1073741824, 0, 131077, -1073741824, 0, 131078, -1073741824, 0, 131079, -1073741824, 0, 131080, 1, 0, 131081, 0, 0, 131082, 0, 0, 131083, -1610612733, 0, 131084, -1610612734, 0, 131085, -1610612734, 0, 262140, 2, 0, 262141, 2, 0, 262142, -1073741821, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 1610612736, 0, 196612, -1073741824, 0, 196613, -1073741824, 0, 196614, -1610612735, 0, 196615, -1073741824, 0, 196616, -1073741824, 0, 196617, 0, 0, 196618, 0, 0, 196619, -1610612733, 0, 196620, -1610612734, 0, 196621, -1610612734, 0, 327676, 2, 0, 327677, 2, 0, 327678, -1073741821, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 1610612736, 0, 262148, -1610612736, 0, 262149, -1610612736, 0, 262150, -1073741824, 0, 262151, -1610612736, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, -1610612733, 0, 262156, -1610612734, 0, 262157, -1610612734, 0, 393212, 2, 0, 393213, 2, 0, 393214, -1073741821, 0, 393215, 0, 0, 327680, -1610612735, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, -1610612733, 0, 327692, -1610612734, 0, 327693, -1610612734, 0, 458748, 2, 0, 458749, 2, 0, 458750, -1073741821, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, -1610612733, 0, 393228, -1610612734, 0, 393229, -1610612734, 0, 524284, 2, 0, 524285, 2, 0, 524286, -1073741819, 0, 524287, 1610612739, 0, 458752, 1610612739, 0, 458753, 1610612739, 0, 458754, 1610612739, 0, 458755, 1610612739, 0, 458756, 1610612739, 0, 458757, 1610612739, 0, 458758, 1610612739, 0, 458759, 1610612739, 0, 458760, 1610612739, 0, 458761, 1610612739, 0, 458762, 1610612739, 0, 458763, 1610612741, 0, 458764, -1610612734, 0, 458765, -1610612734, 0, 589820, -1073741822, 0, 589821, -1610612734, 0, 589822, -1610612734, 0, 589823, -1610612734, 0, 524288, -1610612734, 0, 524289, -1610612734, 0, 524290, -1610612734, 0, 524291, -1610612734, 0, 524292, -1610612734, 0, 524293, -1610612734, 0, 524294, -1610612734, 0, 524295, -1610612734, 0, 524296, -1610612734, 0, 524297, -1610612734, 0, 524298, -1610612734, 0, 524299, -1610612734, 0, 524300, -1610612734, 0, 524301, -1610612734, 0 )

[node name="Dummy" parent="Bots" index="0" instance=ExtResource( 3 )]
position = Vector2( 1968, 400 )

[node name="Camera2D" parent="." index="4"]
visible = false
position = Vector2( 450, 357 )

[node name="Spawn" parent="." index="5" instance=ExtResource( 4 )]
position = Vector2( 189, -100 )
script = ExtResource( 6 )

[node name="SpawnTimer" parent="Spawn" index="0"]
wait_time = 1.0

[node name="Spawn2" parent="." index="6" instance=ExtResource( 4 )]
position = Vector2( 584, -114 )
script = ExtResource( 6 )

[node name="SpawnTimer" parent="Spawn2" index="0"]
wait_time = 1.0

[node name="Spawn3" parent="." index="7" instance=ExtResource( 4 )]
position = Vector2( 937, -91 )
script = ExtResource( 6 )

[node name="SpawnTimer" parent="Spawn3" index="0"]
wait_time = 1.0

[node name="Spawn4" parent="." index="8" instance=ExtResource( 4 )]
position = Vector2( 211, 835 )
script = ExtResource( 7 )

[node name="SpawnTimer" parent="Spawn4" index="0"]
wait_time = 1.0

[node name="Spawn5" parent="." index="9" instance=ExtResource( 4 )]
position = Vector2( 595, 835 )
script = ExtResource( 7 )

[node name="SpawnTimer" parent="Spawn5" index="0"]
wait_time = 1.0

[node name="Spawn6" parent="." index="10" instance=ExtResource( 4 )]
position = Vector2( 1011, 835 )
script = ExtResource( 7 )

[node name="SpawnTimer" parent="Spawn6" index="0"]
wait_time = 1.0

[editable path="Spawn"]

[editable path="Spawn2"]

[editable path="Spawn3"]

[editable path="Spawn4"]

[editable path="Spawn5"]

[editable path="Spawn6"]
